<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UsefulLinks"
    android:orientation="vertical">

    <!--HEADER START-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txtview_useful_links"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/useful_links"
            android:textSize="30sp"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:background="@color/yellow"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" />

    </LinearLayout>
    <!--HEADER END-->


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <TableRow
            android:layout_marginTop="15dp"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/khanacademy"/>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/kAcadName"
                    android:textStyle="bold"
                    android:padding="5dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/kAcadDes"
                    android:padding="5dp"/>
                <TextView
                    android:id="@+id/tv_kAcadLink"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/kAcadLink"
                    android:padding="5dp"/>
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_marginTop="15dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/mosh"/>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/moshName"
                    android:textStyle="bold"
                    android:padding="5dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/moshDes"
                    android:padding="5dp"/>
                <TextView
                    android:id="@+id/tv_moshLink"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/moshLink"
                    android:padding="5dp"/>
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_marginTop="15dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/w3schools"/>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/w3Name"
                    android:textStyle="bold"
                    android:padding="5dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/w3Des"
                    android:padding="5dp"/>
                <TextView
                    android:id="@+id/tv_w3Link"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/w3Link"
                    android:padding="5dp"/>
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_marginTop="15dp"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/grammarly"/>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/grammalyName"
                    android:textStyle="bold"
                    android:padding="5dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/grammalyDes"
                    android:padding="5dp"/>
                <TextView
                    android:id="@+id/tv_grammarlyLink"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/grammalyLink"
                    android:padding="5dp"/>
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_marginTop="15dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/stackoverflow"/>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stackName"
                    android:textStyle="bold"
                    android:padding="5dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stackDes"
                    android:padding="5dp"/>
                <TextView
                    android:id="@+id/tv_stackLink"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stackLink"
                    android:padding="5dp"/>
            </LinearLayout>
        </TableRow>
    </TableLayout>


</LinearLayout>