<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormulasCheatsheetActivity"
    android:orientation="vertical">


    <!--HEADER START-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txtview_formulas_cheatsheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/formulas_cheatsheet"
            android:textSize="30sp"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:background="@color/yellow"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" />

    </LinearLayout>
    <!--HEADER END-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg1">

        <Button
            android:id="@+id/btn_Basicformulas"
            android:layout_width="158dp"
            android:layout_height="86dp"
            android:layout_marginStart="36dp"
            android:layout_marginLeft="36dp"
            android:layout_marginBottom="64dp"
            android:onClick="basic_formulas"
            android:textStyle="italic"
            android:text="@string/btn_Basicformulas"
            android:textColor="@color/white"
            app:backgroundTint="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/btn_Trigonometryformulas"
            app:layout_constraintStart_toStartOf="@+id/btn_Trigonometryformulas" />

        <Button
            android:id="@+id/btn_Trigonometryformulas"
            android:layout_width="241dp"
            android:textStyle="italic"
            android:layout_height="75dp"
            android:layout_marginTop="280dp"
            android:onClick="trigonometry_formulas"
            android:text="@string/btn_Trigonometryformulas"
            app:backgroundTint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_Physicsformulas"
            android:textStyle="italic"
            android:layout_width="191dp"
            android:layout_height="78dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="76dp"
            android:onClick="physics_formulas"
            android:text="@string/btn_Physicsformulas"
            app:backgroundTint="@color/black"
            app:layout_constraintStart_toStartOf="@+id/btn_Trigonometryformulas"
            app:layout_constraintTop_toBottomOf="@+id/btn_Trigonometryformulas" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>